# WinIsland

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Changelog-zh.md  Changelog.md  PROJECT_UNDERSTANDING.md  README-zh.md  README.md  UPSTREAM_MERGE_IMPACT.md  build.rs  log.txt  test_notification.py  新建 文本文档.txt
.agents/: ARCHITECTURE.md  STYLE-GUIDE.md
.agents/skills/build-winisland/: SKILL.md
.agents/skills/commit-winisland/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_request.yml  feature_request.yml  improvement_request.yml
.github/workflows/: pr-build.yml  pr-check.yml  release.yml  rust.yml
.memory/: WinIsland_MEMORY.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.trae/specs/fix-rust-skills-violations/: checklist.md  spec.md  tasks.md
Docs/: CONTRIBUTING-zh.md  CONTRIBUTING.md
Page/: download.md  getting-started.md  guide.md  index.html  index.md  package-lock.json  package.json  plugin-dev.md  release-notes.md  vite.config.ts
Page/.vitepress/: config.mts
Page/src/: App.tsx  content.ts  docs.ts  main.tsx  styles.css  vite-env.d.ts
Page/src/components/: DocumentPage.tsx  GlassFilter.tsx  ProductDemo.tsx
Page/zh/: download.md  getting-started.md  guide.md  index.md  plugin-dev.md  release-notes.md
crates/winisland-plugin-api/: Cargo.toml  ChangeLog.md  README.md
crates/winisland-plugin-api/src/: lib.rs  vtable.rs
packaging/identity/: AppxManifest.xml.template  Build-IdentityPackage.ps1  Install-Identity.ps1  New-DevCertificate.ps1  Register-DevIdentity.ps1  Remove-DevIdentity.ps1  Remove-Identity.ps1  Start-DevWithIdentity.ps1
packaging/installer/: Build-Installer.ps1  WinIsland.iss
resources/in_app/lang/: en.lang  en_us.lang  es_es.lang  zh.lang  zh_cn.lang
src/: main.rs
src/core/: audio.rs  config.rs  i18n.rs  lyrics.rs  mod.rs  multitask.rs  notification.rs  persistence.rs  render.rs  smtc.rs
src/core/context/: mod.rs  types.rs
src/core/render/: background.rs  expanded.rs  mini.rs
src/core/smtc/: properties.rs  session.rs  worker.rs
src/icons/: arrows.rs  controls.rs  mod.rs  music.rs  notification.rs  settings.rs  volume.rs
src/plugin/: loader.rs  manager.rs  mod.rs  types.rs  zip_loader.rs
src/plugins/: api.rs  hooks.rs  manager.rs  mod.rs
src/ui/: mod.rs
src/ui/compact/: mod.rs  notification.rs  volume.rs
src/ui/expanded/: main_view.rs  mod.rs  music_view.rs  tools_view.rs  widget_view.rs
src/ui/widget/: calendar.rs  mod.rs  settings.rs  time.rs
src/utils/: anim.rs  autostart.rs  backdrop.rs  color.rs  font.rs  glass.rs  liquid_glass.rs  logger.rs  mod.rs  mouse.rs  scroll.rs  updater.rs  win32.rs
src/utils/settings_ui/: anim.rs  input.rs  items.rs  mod.rs  renderer.rs
src/window/: app.rs  d3d.rs  mod.rs  music_settings.rs  notification_settings.rs  settings.rs  tray.rs
src/window/app/: events.rs  (+6 more)
(+22 files in other folders)
