[package]
name = "WinIsland"
version = "1.2.7"
edition = "2024"

[workspace]
members = ["crates/winisland-plugin-api"]

[dependencies]
base64 = "0.22"
cpal = "0.18.1"
wasapi = "0.23.0"
realfft = "3.3"
skia-safe = { version = "0.99.0", features = ["d3d"] }
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D12", "Win32_Graphics_DirectComposition", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Security", "Media_Control", "Foundation", "Foundation_Collections", "Storage_Streams", "ApplicationModel", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Variant", "Win32_Globalization", "Win32_UI_Shell", "UI_Notifications", "UI_Notifications_Management", "Data_Xml_Dom", "Win32_System_SystemInformation", "Win32_Storage_Packaging_Appx"] }
windows-core = "0.62.2"
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
dirs = "6.0"
image = "0.25"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
rfd = "0.17.2"
libloading = "0.9"
log = { version = "0.4", features = ["std"] }
winisland-plugin-api = { path = "crates/winisland-plugin-api" }
zip = "8.6.0"
serde_yaml = "0.9"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
